--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "lockfile": "~>0.3.0",
     "grunt-concat-sourcemap": "~0.3.0",
     "grunt-dom-munger": "~2.0.1",
-    "grunt-sass": "~0.6.1"
+    "grunt-sass": "~0.6.1",
+    "karma-safari-launcher": "~0.1.1"
   },
   "dependencies": {
     "loom": "~2.0.0",
